# MKI

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build-appimage.sh
.github/workflows/: release.yml
data/: io.github.labj1987.MKI.appdata.xml  io.github.labj1987.MKI.policy  mainline-kernel-installer.desktop
scripts/: privileged-install.sh
src/: download.rs  install.rs  main.rs  system.rs  ui.rs  versions.rs
