[package]
name = "mainline-kernel-installer"
version = "1.0.5"
edition = "2021"
description = "Mainline Kernel Installer — GTK4 GUI for Ubuntu mainline kernels"
authors = ["Alex Brown"]

[[bin]]
name = "mainline-kernel-installer"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
glib = "0.20"
gio = "0.20"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
futures-util = "0.3"
scraper = "0.21"
regex = "1"
